# django-auth-logger

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  README.rst  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
auth_logger/: apps.py  tests.py
auth_logger/signals/: handlers.py
sandbox/: settings.py  urls.py
sandbox/auth_logger/: settings.py  urls.py  wsgi.py
sandbox/sandbox/: settings.py
src/auth_logger/: __init__.py  apps.py  tests.py
src/auth_logger/signals/: handlers.py
