[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-auth-logger"
version = "2.3.0"
description = "A tiny project to log login attempts. Log them only to standard logging - not the database."
readme = "README.rst"
dependencies = ["Django (>=4.2)", "django-ipware (>=7.0.1)"]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-auth-logger"
Repository = "https://gitlab.com/thelabnyc/django-auth-logger"

[dependency-groups]
dev = [
    "flake8 (==7.3.0)",
    "freezegun==1.5.2",
    "django-stubs[compatible-mypy] (==5.2.1)",
    "tox>=4.27.0",
    "tox-uv>=1.26.1",
    "coverage>=7.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["auth_logger"]

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]

[tool.isort]
profile = "black"
from_first = true
